<resources>
    <string name="app_name">Swafoody</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="img_on_boarding">on_boarding</string>

    <string name="add_ingredients">Add Ingredients</string>
    <string name="add_ingredients_desc">Get reciped by image of vegetables or fruits</string>
    <string name="apple">apple</string>
    <string name="broccoli">broccoli</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="icon_back">icon back</string>
    <string name="illustration_shrimp">Illustration Shrimp</string>
    <string name="result_image">Result Image</string>
    <string name="image_result_2">Image Result 2</string>
    <string name="get_recipe">Get Recipe</string>
    <string name="intent_to_add_ingredients">Intent to Add Ingredients</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Add</string>
    <string name="title_profile">Profile</string>

    <string name="txt_head_home">SWAFOODY</string>
    <string name="txt_slogan_home">add your ingredients to get reciped</string>
    <string name="txt_add_ingredients">Add Ingredients</string>
    <string name="txt_saved_recipe">Saved Recipe</string>
    <string name="txt_view_all">View All</string>

    <string name="content_desc_img">Food Description</string>
    <string name="calories">Calories</string>
    <string name="title">Title</string>
    <string name="image">Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommendations">Recommendations</string>
    <string name="hello">Hello</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create">Create</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="add_photo">add photo</string>
    <string name="please_wait">Mohon tunggu</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="setting">Setting</string>
    <string name="change_password">Change Profile</string>
    <string name="logout">Logout</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="protein">Protein</string>
    <string name="gram">g</string>
    <string name="kal">kal</string>
    <string name="ingredients">Ingredients</string>
    <string name="keto_diet">Keto Diet</string>
    <string name="diet_vegan">Vegan Diet</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="ok" />
    <string name="cofirm_password">Cofirm Password</string>
    <string name="favorite">Favorite</string>
    <string name="recipeai">RecipeAi</string>
</resources>