<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/navigation_profile"
    android:background="#8CC63E"
    tools:context=".ui.profile.ProfileFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/tvProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_url"
        app:layout_constraintVertical_bias="0.045" />

    <ImageView
        android:id="@+id/photo_url"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfile"
        app:layout_constraintVertical_bias="0.126"
        android:contentDescription="@string/profile"/>

    <ImageButton
        android:id="@+id/img_photo"
        android:layout_width="67dp"
        android:layout_height="59dp"
        android:background="@mipmap/femaleuser"
        android:contentDescription="@string/profile"
        app:layout_constraintBottom_toBottomOf="@+id/photo_url"
        app:layout_constraintEnd_toEndOf="@+id/photo_url"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/photo_url"
        app:layout_constraintTop_toTopOf="@+id/photo_url"
        app:layout_constraintVertical_bias="0.487" />

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:backgroundTint="#b6d38f"
        android:text="@string/setting"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#31a044"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintVertical_bias="0.124" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:backgroundTint="#b6d38f"
        android:text="@string/change_password"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#31a044"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSetting"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:backgroundTint="#b6d38f"
        android:text="@string/logout"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#31a044"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangePassword"
        app:layout_constraintVertical_bias="0.386" />

</androidx.constraintlayout.widget.ConstraintLayout>